feat: approve CORS for frontend vercel and backend railway